--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "moment": "^2.30.1",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.5.3",
     "validator": "^13.12.0"
   },
